--- a/modules/ah-knex-plugin/package.json
+++ b/modules/ah-knex-plugin/package.json
@@ -35,6 +35,7 @@
     "knex": "^0.17.6"
   },
   "devDependencies": {
-    "actionhero": ">=19.1.4"
+    "actionhero": ">=19.1.4",
+    "sqlite3": "^4.0.9"
   }
 }
