--- a/projects/debug-project/package.json
+++ b/projects/debug-project/package.json
@@ -1,27 +1,29 @@
 {
   "private": true,
-  "author" : "YOU <YOU@example.com>",
-  "name" : "debug_project",
-  "description" : "my actionhero project",
-  "version" : "0.0.0",
-  "engines" : {
+  "author": "YOU <YOU@example.com>",
+  "name": "debug_project",
+  "description": "my actionhero project",
+  "version": "0.0.0",
+  "engines": {
     "node": ">=8.0.0"
   },
-  "dependencies" : {
-    "actionhero" : "19.1.4",
-    "ws" : "latest",
-    "ioredis" : "latest",
-    "winston" : "latest"
+  "dependencies": {
+    "@zaephor-ah/ah-knex-plugin": "^0.1.0",
+    "@zaephor-ah/ah-objection-plugin": "0.0.1",
+    "actionhero": "19.1.4",
+    "ioredis": "latest",
+    "winston": "latest",
+    "ws": "latest"
   },
-  "devDependencies" : {
+  "devDependencies": {
     "jest": "latest",
-    "standard" : "latest"
+    "standard": "latest"
   },
-  "scripts" : {
-    "start" : "actionhero start",
-    "actionhero" : "actionhero",
+  "scripts": {
+    "start": "actionhero start",
+    "actionhero": "actionhero",
     "pretest": "standard",
-    "test" : "jest"
+    "test": "jest"
   },
   "standard": {
     "ignore": [
