--- a/projects/debug-project/package.json
+++ b/projects/debug-project/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@zaephor-ah/ah-knex-plugin": "^0.1.0",
     "@zaephor-ah/ah-objection-plugin": "0.0.1",
-    "actionhero": "19.1.4",
+    "actionhero": ">=19.1.4",
     "ioredis": "latest",
     "winston": "latest",
     "ws": "latest"
