--- a/modules/ah-session-plugin/package.json
+++ b/modules/ah-session-plugin/package.json
@@ -32,8 +32,7 @@
   "peerDependencies": {
     "actionhero": ">=19.1.4"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "actionhero": ">=19.1.4"
   }
