--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "commit": "commit",
     "postinstall": "lerna bootstrap --hoist",
     "pretest": "standard",
+    "release": "lerna version",
     "repo:fetch": "git remote add upstream https://github.com/Zaephor/nodejs-monorepo.git && git fetch upstream && git merge upstream/master && git remote remove upstream",
     "test": "lerna exec --concurrency 1 'NODE_ENV=test mocha --colors --reporter spec --exit ./__tests__/*.js'"
   },
